--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
-    "next": "14.0.3",
+    "next": "^13.5.6",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.0.0",
@@ -25,7 +25,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint-config-next": "13.4.12",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
